--- a/main.css
+++ b/main.css
@@ -1,19 +1,51 @@
 /* Your code here */
 
+body {
+  font-family: 'Segoe UI', 'Roboto', 'Noto Sans', 'Ubuntu', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-size: 14px;
+  margin: 0px;
+}
+
+.header-nav__container {
+  display: flex;
+  background-color: #026AA7;
+  font-size: 16px;
+  /* line-height: 20px; */
+  padding: 4px;
+  color: white;
+  justify-content: space-between;
+  border: 1px solid red;
+}
+
+#alerts {
+  background-color: #CF513D;
+}
+
+@media screen and (max-width: 730px) {
+  .boards-label {
+    visibility: hidden;
+  }
+
+  input[type="search"] {
+    visibility: hidden;
+  }
+}
+/* border: 1px solid red; */
+
 /* Supplied CSS follows. */
-.header-nav__group{
+.header-nav__group {
   display: flex;
 }
 
 .header-nav__button {
   display: inline-flex;
   border-radius: 3px;
-  border: 0;
+  border: 1px solid red;
   cursor: pointer;
   text-decoration: none;
   align-items: center;
   text-align: center;
-  background-color: hsla(0,0%,100%,.3);
+  background-color: hsla(0, 0%, 100%, .3);
   box-shadow: none;
   color: #fff;
   line-height: 32px;
@@ -24,7 +56,7 @@
   height: 20px;
 }
 
-.header-nav__button#search > input {
+.header-nav__button#search>input {
   border-style: none;
   border: none;
   background-image: none;
@@ -34,7 +66,7 @@
   box-shadow: none;
 }
 
-.header-nav__button > .boards-label {
+.header-nav__button>.boards-label {
   font-weight: 700;
   padding-left: 4px;
 }
@@ -46,8 +78,9 @@
   position: absolute;
   transform: translateX(-50%);
   top: 5px;
+  border: 1px solid red;
 }
 
- .header-nav__button > i{
+.header-nav__button>i {
   width: 24px;
 }
