--- a/main.css
+++ b/main.css
@@ -30,6 +30,7 @@ body {
     visibility: hidden;
   }
 }
+
 /* border: 1px solid red; */
 .team__container {
   background-color: #f4f5f7;
@@ -43,21 +44,56 @@ body {
   text-align: center;
 }
 
-.team__info > h1 {
+.team__info>h1 {
   margin: 0 0 12px;
   font-size: 24px;
   font-weight: 600;
   line-height: 28px;
 }
 
-.team__info > a {
+.team__info>a {
   color: #172b4d;
   line-height: 20px;
   font-weight: normal;
 }
 
+.tabbed-nav__container {
+  background-color: #f4f5f7;
+}
 
+.tabbed-nav__group {
+  border-bottom: 1px solid #dfe1e6;
+  display: flex;
+  justify-content: center;
+}
 
+.tabbed-nav__link {
+  background-color: white;
+  border: 1px solid #dfe1e6;
+  border-bottom: 0;
+  border-radius: 2px;
+  font-weight: bold;
+  line-height: 20px;
+  padding: 10px;
+  margin: 0 5px;
+  color: #172b4d;
+}
+
+@media screen and (min-width: 501px) {
+  .tabbed-nav__group {
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .tabbed-nav__group {
+    display: block;
+  }
+  
+  .tabbed-nav__link {
+    display: block;
+  }
+}
 /* Supplied CSS follows. */
 .header-nav__group {
   display: flex;
